src/components/Card/Card.css
/* Container needed to position the button. Adjust the width as needed */
.container {
    position: relative;
    width: 15%;
  }
  
  /* Make the image responsive */
  .container img {
    width: 100%;
    height: 100%;
  }

  .container:hover .btn{
    visibility: visible;
  }

  .container:hover .btn2{
    visibility: visible;
  }
  
  /* Style the button and place it on container/image */
  .container .btn {
    position: absolute;
    top: 30%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    background-color: #555;
    color: white;
    font-size: 16px;
    padding: 12px 24px;
    border: none;
    cursor: pointer;
    border-radius: 5px;
    visibility: hidden;
  }

  .container .btn2 {
    position: absolute;
    top: 60%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    background-color: #555;
    color: white;
    font-size: 16px;
    padding: 12px 24px;
    border: none;
    cursor: pointer;
    border-radius: 5px;
    visibility: hidden;
  }
  
  .container .btn:hover {
    background-color: black;
  }

  .container .btn2:hover {
    background-color: black;
  }

